// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DraftRevisionPrompt golden > defaults to the generic variant 1`] = `
{
  "system": "한국어 장편 소설 초안을 지시에 따라 다시 쓰는 작가다.
아래 [지시]를 모두 반영해 본문을 수정하되, 지시와 무관한 부분의 분위기와 문체는 유지한다.
[캐릭터 카드]의 말투·보이스는 최우선 불변 조건이다. [지시]와 충돌하면 캐릭터 카드를 따르고 기존 보이스를 보존하라.
설정([설정])과 장면 의도([장면 의도])를 어기지 마라.
분량을 유지하라. 지시가 줄이라고 하지 않는 한 수정본이 원본보다 짧아지면 안 된다. 고친 대목이 짧아지면 그만큼 그 자리를 다시 채워라.
본문에 있는 장면 구분 표식(단독 줄의 --- 또는 연속 빈 줄)은 장면 전환 표시이므로 위치와 형태를 그대로 유지하라.
설명·머리말 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]
- 설정 모순: 눈동자 색을 녹색으로
- 반복 줄이기

[장면 의도]
주인공 소개

[설정]
엘리아 — 눈동자 색: 녹색
도시는 항구다

[캐릭터 카드]
[엘리아] 역할: main
말투: 짧은 존댓말

[준] 역할: side

[본문]
엘리아가 교실로 들어왔다.

---

준이 따라왔다.",
}
`;

exports[`DraftRevisionPrompt golden > leaves optional blocks out for the generic variant 1`] = `
{
  "system": "한국어 장편 소설 초안을 지시에 따라 다시 쓰는 작가다.
아래 [지시]를 모두 반영해 본문을 수정하되, 지시와 무관한 부분의 분위기와 문체는 유지한다.
[캐릭터 카드]의 말투·보이스는 최우선 불변 조건이다. [지시]와 충돌하면 캐릭터 카드를 따르고 기존 보이스를 보존하라.
설정([설정])과 장면 의도([장면 의도])를 어기지 마라.
분량을 유지하라. 지시가 줄이라고 하지 않는 한 수정본이 원본보다 짧아지면 안 된다. 고친 대목이 짧아지면 그만큼 그 자리를 다시 채워라.
본문에 있는 장면 구분 표식(단독 줄의 --- 또는 연속 빈 줄)은 장면 전환 표시이므로 위치와 형태를 그대로 유지하라.
설명·머리말 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]
- 한 가지 지시

[본문]
본문만.",
}
`;

exports[`DraftRevisionPrompt golden > leaves optional blocks out for the generic variant 2`] = `
{
  "system": "한국어 장편 소설 초안을 지시에 따라 다시 쓰는 작가다.
아래 [지시]를 모두 반영해 본문을 수정하되, 지시와 무관한 부분의 분위기와 문체는 유지한다.
[캐릭터 카드]의 말투·보이스는 최우선 불변 조건이다. [지시]와 충돌하면 캐릭터 카드를 따르고 기존 보이스를 보존하라.
설정([설정])과 장면 의도([장면 의도])를 어기지 마라.
분량을 유지하라. 지시가 줄이라고 하지 않는 한 수정본이 원본보다 짧아지면 안 된다. 고친 대목이 짧아지면 그만큼 그 자리를 다시 채워라.
본문에 있는 장면 구분 표식(단독 줄의 --- 또는 연속 빈 줄)은 장면 전환 표시이므로 위치와 형태를 그대로 유지하라.
설명·머리말 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]
- 한 가지 지시

[본문]
본문만.",
}
`;

exports[`DraftRevisionPrompt golden > leaves optional blocks out for the generic variant 3`] = `
{
  "system": "한국어 장편 소설 초안을 지시에 따라 다시 쓰는 작가다.
아래 [지시]를 모두 반영해 본문을 수정하되, 지시와 무관한 부분의 분위기와 문체는 유지한다.
[캐릭터 카드]의 말투·보이스는 최우선 불변 조건이다. [지시]와 충돌하면 캐릭터 카드를 따르고 기존 보이스를 보존하라.
설정([설정])과 장면 의도([장면 의도])를 어기지 마라.
분량을 유지하라. 지시가 줄이라고 하지 않는 한 수정본이 원본보다 짧아지면 안 된다. 고친 대목이 짧아지면 그만큼 그 자리를 다시 채워라.
본문에 있는 장면 구분 표식(단독 줄의 --- 또는 연속 빈 줄)은 장면 전환 표시이므로 위치와 형태를 그대로 유지하라.
설명·머리말 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]
- 한 가지 지시

[설정]
사실 하나

[본문]
본문만.",
}
`;

exports[`DraftRevisionPrompt golden > leaves optional blocks out for the generic variant 4`] = `
{
  "system": "한국어 장편 소설 초안을 지시에 따라 다시 쓰는 작가다.
아래 [지시]를 모두 반영해 본문을 수정하되, 지시와 무관한 부분의 분위기와 문체는 유지한다.
[캐릭터 카드]의 말투·보이스는 최우선 불변 조건이다. [지시]와 충돌하면 캐릭터 카드를 따르고 기존 보이스를 보존하라.
설정([설정])과 장면 의도([장면 의도])를 어기지 마라.
분량을 유지하라. 지시가 줄이라고 하지 않는 한 수정본이 원본보다 짧아지면 안 된다. 고친 대목이 짧아지면 그만큼 그 자리를 다시 채워라.
본문에 있는 장면 구분 표식(단독 줄의 --- 또는 연속 빈 줄)은 장면 전환 표시이므로 위치와 형태를 그대로 유지하라.
설명·머리말 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]
- 한 가지 지시

[캐릭터 카드]
[준] 역할: side

[본문]
본문만.",
}
`;

exports[`DraftRevisionPrompt golden > leaves optional blocks out for the xs variant 1`] = `
{
  "system": "아래 지시를 반영하되 [캐릭터 카드]의 말투·보이스를 최우선으로 보존하라. 설명 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]
- 한 가지 지시

[본문]
본문만.",
}
`;

exports[`DraftRevisionPrompt golden > leaves optional blocks out for the xs variant 2`] = `
{
  "system": "아래 지시를 반영하되 [캐릭터 카드]의 말투·보이스를 최우선으로 보존하라. 설명 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]
- 한 가지 지시

[본문]
본문만.",
}
`;

exports[`DraftRevisionPrompt golden > leaves optional blocks out for the xs variant 3`] = `
{
  "system": "아래 지시를 반영하되 [캐릭터 카드]의 말투·보이스를 최우선으로 보존하라. 설명 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]
- 한 가지 지시

[설정]
사실 하나

[본문]
본문만.",
}
`;

exports[`DraftRevisionPrompt golden > leaves optional blocks out for the xs variant 4`] = `
{
  "system": "아래 지시를 반영하되 [캐릭터 카드]의 말투·보이스를 최우선으로 보존하라. 설명 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]
- 한 가지 지시

[캐릭터 카드]
[준] 역할: side

[본문]
본문만.",
}
`;

exports[`DraftRevisionPrompt golden > renders an empty instruction list 1`] = `
{
  "system": "한국어 장편 소설 초안을 지시에 따라 다시 쓰는 작가다.
아래 [지시]를 모두 반영해 본문을 수정하되, 지시와 무관한 부분의 분위기와 문체는 유지한다.
[캐릭터 카드]의 말투·보이스는 최우선 불변 조건이다. [지시]와 충돌하면 캐릭터 카드를 따르고 기존 보이스를 보존하라.
설정([설정])과 장면 의도([장면 의도])를 어기지 마라.
분량을 유지하라. 지시가 줄이라고 하지 않는 한 수정본이 원본보다 짧아지면 안 된다. 고친 대목이 짧아지면 그만큼 그 자리를 다시 채워라.
본문에 있는 장면 구분 표식(단독 줄의 --- 또는 연속 빈 줄)은 장면 전환 표시이므로 위치와 형태를 그대로 유지하라.
설명·머리말 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]


[장면 의도]
주인공 소개

[설정]
엘리아 — 눈동자 색: 녹색
도시는 항구다

[캐릭터 카드]
[엘리아] 역할: main
말투: 짧은 존댓말

[준] 역할: side

[본문]
엘리아가 교실로 들어왔다.

---

준이 따라왔다.",
}
`;

exports[`DraftRevisionPrompt golden > renders an empty instruction list 2`] = `
{
  "system": "한국어 장편 소설 초안을 지시에 따라 다시 쓰는 작가다.
아래 [지시]를 모두 반영해 본문을 수정하되, 지시와 무관한 부분의 분위기와 문체는 유지한다.
[캐릭터 카드]의 말투·보이스는 최우선 불변 조건이다. [지시]와 충돌하면 캐릭터 카드를 따르고 기존 보이스를 보존하라.
설정([설정])과 장면 의도([장면 의도])를 어기지 마라.
분량을 유지하라. 지시가 줄이라고 하지 않는 한 수정본이 원본보다 짧아지면 안 된다. 고친 대목이 짧아지면 그만큼 그 자리를 다시 채워라.
본문에 있는 장면 구분 표식(단독 줄의 --- 또는 연속 빈 줄)은 장면 전환 표시이므로 위치와 형태를 그대로 유지하라.
설명·머리말 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]


[본문]
본문만.",
}
`;

exports[`DraftRevisionPrompt golden > renders every block for the generic variant 1`] = `
{
  "system": "한국어 장편 소설 초안을 지시에 따라 다시 쓰는 작가다.
아래 [지시]를 모두 반영해 본문을 수정하되, 지시와 무관한 부분의 분위기와 문체는 유지한다.
[캐릭터 카드]의 말투·보이스는 최우선 불변 조건이다. [지시]와 충돌하면 캐릭터 카드를 따르고 기존 보이스를 보존하라.
설정([설정])과 장면 의도([장면 의도])를 어기지 마라.
분량을 유지하라. 지시가 줄이라고 하지 않는 한 수정본이 원본보다 짧아지면 안 된다. 고친 대목이 짧아지면 그만큼 그 자리를 다시 채워라.
본문에 있는 장면 구분 표식(단독 줄의 --- 또는 연속 빈 줄)은 장면 전환 표시이므로 위치와 형태를 그대로 유지하라.
설명·머리말 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]
- 설정 모순: 눈동자 색을 녹색으로
- 반복 줄이기

[장면 의도]
주인공 소개

[설정]
엘리아 — 눈동자 색: 녹색
도시는 항구다

[캐릭터 카드]
[엘리아] 역할: main
말투: 짧은 존댓말

[준] 역할: side

[본문]
엘리아가 교실로 들어왔다.

---

준이 따라왔다.",
}
`;

exports[`DraftRevisionPrompt golden > renders every block for the rich variant 1`] = `
{
  "system": "한국어 장편 소설 초안을 지시에 따라 다시 쓰는 작가다.
아래 [지시]를 모두 반영해 본문을 수정하되, 지시와 무관한 부분의 분위기와 문체는 유지한다.
[캐릭터 카드]의 말투·보이스는 최우선 불변 조건이다. [지시]와 충돌하면 캐릭터 카드를 따르고 기존 보이스를 보존하라.
설정([설정])과 장면 의도([장면 의도])를 어기지 마라.
분량을 유지하라. 지시가 줄이라고 하지 않는 한 수정본이 원본보다 짧아지면 안 된다. 고친 대목이 짧아지면 그만큼 그 자리를 다시 채워라.
본문에 있는 장면 구분 표식(단독 줄의 --- 또는 연속 빈 줄)은 장면 전환 표시이므로 위치와 형태를 그대로 유지하라.
설명·머리말 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]
- 설정 모순: 눈동자 색을 녹색으로
- 반복 줄이기

[장면 의도]
주인공 소개

[설정]
엘리아 — 눈동자 색: 녹색
도시는 항구다

[캐릭터 카드]
[엘리아] 역할: main
말투: 짧은 존댓말

[준] 역할: side

[본문]
엘리아가 교실로 들어왔다.

---

준이 따라왔다.",
}
`;

exports[`DraftRevisionPrompt golden > renders every block for the xs variant 1`] = `
{
  "system": "아래 지시를 반영하되 [캐릭터 카드]의 말투·보이스를 최우선으로 보존하라. 설명 없이 수정된 본문 전체만 출력하라.",
  "user": "[지시]
- 설정 모순: 눈동자 색을 녹색으로
- 반복 줄이기

[장면 의도]
주인공 소개

[설정]
엘리아 — 눈동자 색: 녹색
도시는 항구다

[캐릭터 카드]
[엘리아] 역할: main
말투: 짧은 존댓말

[준] 역할: side

[본문]
엘리아가 교실로 들어왔다.

---

준이 따라왔다.",
}
`;
